style.css
html, body {
  height: 100%;
  width: 100%;
}
 html, body, section, article, h1, h2, h3, h6, p, strong, em, a, select, ul, li, input,a textarea, button, img {
  margin: 0;
  border: 0;
  padding: 0;
  outline: 0;

  box-sizing: inherit;
  font: inherit;
  text-align: inherit;
  text-decoration: inherit;
  color: inherit;

  background: transparent;

  font-size: 12px;
  font-weight: 300;
  font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;

  list-style-type: none;
}

/*navbar*/

.navbar {
  display: flex;
  justify-content: space-between;
  background-color: #FBFBFB;
  width: calc(100% - 50px);
  position: fixed;
  z-index: 1000;
  box-shadow: 1px 1px 4px lightgrey;
  right: 0;
}

.dropdown-wrapper img {
  padding-top: 15px;
  cursor: pointer;
}

.dropdown-wrapper {
  position: relative;
  width: 5%;
}

.dropdown-wrapper .dropdown-content {
  display: none;
  position: absolute;
  min-width: 200%;
  height: auto;
  right: 0%;
  top: 50px;
}

.dropdown-wrapper .dropdown-content li {
  padding: 10px;
}

.dropdown-wrapper .dropdown-content li:hover {
  background-color: #333;
  color: white;
}

.dropdown-wrapper:hover .dropdown-content{
  display: block;
}

h1 {
  font-size: 25px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 15px;
  font-weight: lighter;
}

/*sidebar*/
.sidebar {
  height: 100%;
  width: 50px;
  position: fixed;
  padding: 0;
  background-color: #333;
}

.sidebar img {
  height: 30px;
  width: 30px;
  background-color: #E3025E;
  padding: 10px;
}

.sidebar ul {
  width: 50px;
  background-color: #333;
}

.sidebar ul li {
  color: white;
  text-align: center;
  border: none;
}

.whitebox {
  height: 30px;
  width: 30px;
  border-radius: 3px;
  background-color: white;
}

/*main content*/

.main-content {
  width: calc(100% - 50px);
  height: calc(100% - 55px);
  display: flex;
  position: relative;
  padding-top: 51px;
  margin-left: auto;
}

ul {
  width: 24%;
  height: 100%;
  background-color: whitesmoke;
  overflow: scroll;
}

li {
  cursor: pointer;
  padding: 5px 10px;
  border-bottom: 1px solid lightgrey;
}

.selected {
  background-image: url('./arrow.svg');
  background-repeat: no-repeat;
  background-position: 104% 45%;
}

.article {
  width: 74%;
  height: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-left: 10px;
}

.article-container {
}

.article-header h2 {
  font-size: 20px;
}

h4 {
  margin: 2px 0;
}

hr {
  border: 0;
  height: 0;
  border-top: 1px solid rgba(0, 0, 0, 0.1);
  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
}

.article-content figure {
  text-align: center;
}

.image {
  width: 500px;
  height: 250px;
  background-color: grey;
  margin: 0 auto;
}

p:first-child:first-letter {
  float: left;
  font-size: 35px;
  line-height: 25px;
  padding-top: 2px;
  padding-right: 4px;
  padding-left: 1.5px;
}

.footer {
  border-top: 1px solid lightgrey;
}

.message {
  border: 1px solid lightgrey;
  padding: 10px;
  margin-top: 20px;
  margin-bottom: 20px;
  font-size: 15px;
}

